# ecocode-rust-temp

./: .gitignore  getstarted.md  readme.md
ecocode-rust/: Cargo.toml
ecocode-rust-sonar/: docker-compose.yml
ecocode-rust-test/: Cargo.toml  docker-compose.yml
ecocode-rust-test/.scannerwork/: report-task.txt
ecocode-rust-test/src/: main.rs
ecocode-rust/rules/ec2/: Cargo.toml
ecocode-rust/rules/ec2/src/: lib.rs
ecocode-rust/src/: lib.rs
sonar-scripts/: readme.md  run_sonar_lint.sh
